# NextGenDID

./: .gitmodules  Cargo.toml  README.md
nextgen/: Cargo.toml
nextgen/benches/: nextgen.rs
s3id-4DC0/: Cargo.toml  LICENSE-MIT
vrf-rs-master/: Cargo.toml
vrf-rs-master/benches/: vrf_benchmark.rs
vrf-rs-master/src/openssl/: mod.rs
